Issue 2234: Break on error bubble weird behavior contribution of note*.png by  nicolas.hatier,
http://code.google.com/p/fbug/source/detail?r=4408

--- a/extension/skin/classic/debugger.css
+++ b/extension/skin/classic/debugger.css
@@ -49,6 +49,10 @@
     white-space: pre;
 }
 
+.noteInToolTip { /* below sourceLine, so it overrides it */
+    background-color: #FFD472;
+}
+
 .useA11y .sourceBox .sourceViewport:focus .sourceLine {
     background-color: #FFFFC0;
     color: navy;
@@ -323,6 +327,6 @@
     font-weight: bold;
 }
 
-.errorNotificationButton {
+.BreakNotificationButton {
     float: right;
 }
